--- a/.github/workflows/calendar.yml
+++ b/.github/workflows/calendar.yml
@@ -1,9 +1,9 @@
-name: Full-year Calendar
+name: Isometric Calendar
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Her hafta pazar günü çalışacak
-  workflow_dispatch:       # Manuel tetikleme seçeneği
+    - cron: '0 0 * * 0'  # Her hafta pazar günleri
+  workflow_dispatch:      # Manuel tetikleme
 
 jobs:
   generate-calendar:
@@ -11,19 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Generate Full-Year Calendar
+      - name: Generate Isometric Calendar
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.isocalendar.fullyear.svg
+          filename: metrics.plugin.isocalendar.isometric.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
-
-      - name: Commit & Push generated file
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git add metrics.plugin.isocalendar.fullyear.svg
-          git commit -m "Update full-year calendar"
-          git push
+          plugin_isocalendar_style: isometric
