--- a/.github/workflows/calendar.yml
+++ b/.github/workflows/calendar.yml
@@ -2,7 +2,7 @@ name: Isometric Calendar
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Her hafta pazar günleri
+    - cron: '0 0 * * 0'  # Her hafta pazar günleri otomatik çalışır
   workflow_dispatch:      # Manuel tetikleme
 
 jobs:
@@ -19,3 +19,11 @@ jobs:
           base: ""
           plugin_isocalendar: yes
           plugin_isocalendar_style: isometric
+
+      - name: Commit & Push SVG
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git add metrics.plugin.isocalendar.isometric.svg
+          git commit -m "Update isometric calendar" || echo "No changes to commit"
+          git push
