--- a/.github/workflows/metrics1.yml
+++ b/.github/workflows/metrics1.yml
@@ -1,19 +1,24 @@
 name: Metrics
 on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Schedule daily updates to refresh the calendar
+  schedule:
+    - cron: "0 0 * * *" # Runs daily at midnight UTC
+  # Allow manual triggering from the Actions tab
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  # Run on push to main/master branch (optional)
+  push:
+    branches: ["main", "master"]
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
     permissions:
-      contents: write
+      contents: write # Required to write the generated SVG to the repository
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Half-year calendar
+        uses: lowlighter/metrics@latest
         with:
+          filename: metrics.plugin.isocalendar.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: "" # Empty base to focus on the isometric calendar
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year # Explicitly set to half-year
